# satsbox

./: .dev.env  .dockerignore  .env  .env.test  .gitignore  .test.env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  satsbox.example.toml
.github/workflows/: build.yml  docker.yml  lint.yml  test.yml
contrib/: .env  dev.sh  docker-compose.test.yml  docker-compose.volume.yml  docker-compose.yml  env.sh  ubuntu-latest.sh
entity/: Cargo.toml
entity/src/: donation.rs  event.rs  invoice.rs  lib.rs  record.rs  user.rs
examples/: dev.rs
lightning/: .env  .test.env  Cargo.toml  build.rs
lightning/src/: cln.rs  lib.rs  lightning.rs  lnd.rs
lightning/tests/: cln.rs  lightning.rs  lnd.rs  payment.rs  util.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230714_035008_create_user_table.rs  m20230714_040219_create_invoice_table.rs  m20230804_082552_create_record_table.rs  m20230822_184929_create_event_table.rs  m20230828_220838_create_donation_table.rs  main.rs
src/: api.rs  app.rs  auth.rs  jwt_auth.rs  key.rs  lib.rs  lndhub.rs  lnurl.rs  main.rs  nip05.rs  nwc.rs  service.rs  setting.rs
src/auth/: jwt.rs  mod.rs  nostr.rs
tests/: api.rs  lndhub.rs  lnurl.rs  nip05.rs  nwc.rs  service.rs  util.rs
ui/: .env.development  index.html  package.json  vite.config.js  wallet.html
ui/public/: index.css
ui/public/assets/: index.css
ui/src/: Setting.vue  request.js  util.js  wallet.css  wallet.js
