[package]
name = "satsbox"
version = "0.1.0"
description = "Nostr friendly bitcoin lightning custodial wallet service."
keywords = ["lightning", "nostr"]
publish = false

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-client = { version = "0.1.0", path = "./lightning" }
migration = { version = "0.1.0", path = "./migration" }
entity = { version = "0.1.0", path = "./entity" }
thiserror = "1.0.43"
sea-orm = { version = "0.11.3", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite",
] }
actix-web = "4.3.1"
config = { version = "0.13.3", features = [
    "toml",
    "json",
], default-features = false }
notify = "6.0.0"
tracing = "0.1.37"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
parking_lot = "0.12.1"
num_cpus = "1.16.0"
tracing-subscriber = { version = "0.3.17" }
clap = { version = "4.2.7", features = ["derive"] }
dotenvy = "0.15.7"
sha2 = "0.10.7"
rand = "0.8.5"

[dev-dependencies]
anyhow = "1.0.71"
tempfile = "3.4.0"
temp-env = "0.3.4"
actix-rt = "2.8.0"
actix-http = "3.3.1"
actix-test = "0.1.1"

[workspace]
members = ["lightning", "migration", "entity"]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/satsbox"
repository = "https://github.com/satsbox/satsbox.git"
authors = ["Arron zhang <arronzhang@me.com>"]
