[package]
name = "satsbox-entity"
version = "0.1.0"
description = "Satsbox entity."
keywords = ["entity"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = "0.12.2"
