[package]
name = "lightning-client"
version = "0.1.0"
description = "Lightning network clients, Core Lightning grpc, Lnd grpc."
keywords = ["lightning"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hex = "0.4.3"
thiserror = "1.0.43"
tonic = { version = "0.9.2", features = ["tls"] }
tokio = { version = "1.29.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "fs",
] }
prost = "0.11.9"
hyper = "0.14.27"
tower = "0.4.13"
hyper-openssl = "0.9.2"
openssl = "0.10.55"

[dev-dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.9.2"
