[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "0.11.3"
features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
  "sqlx-mysql",
  "sqlx-sqlite",
]
