[package]
name = "satsbox-migration"
version = "0.1.0"
description = "Satsbox migration."
keywords = ["migration"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entity = { version = "0.1.0", package = "satsbox-entity", path = "../entity" }

[dependencies.sea-orm-migration]
version = "0.12.2"
features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
  "sqlx-mysql",
  "sqlx-sqlite",
]
